--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -7,8 +7,12 @@
         {% endif %}
     </head>
     <body>
-        <span>Microblog: <a href="/index">Home</a></span>
-        <span><a href="/login">Login</a></span>
+        |<span>Microblog: <a href="{{url_for('index')}}">Home</a></span>
+        {% if g.user.is_authenticated() %}
+            |<span><a href="{{url_for('logout')}}">Logout</a></span>
+        {% else %}
+            |<span><a href="{{url_for('login')}}">Login</a></span>
+        {% endif %}
         <hr>
         {% with messages = get_flashed_messages() %}
             {% if messages %}
