end of tutorial 5 "User Logins"

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -7,11 +7,11 @@
         {% endif %}
     </head>
     <body>
-        |<span>Microblog: <a href="{{url_for('index')}}">Home</a></span>
+        | <span>Microblog: <a href="{{url_for('index')}}">Home</a></span>
         {% if g.user.is_authenticated() %}
-            |<span><a href="{{url_for('logout')}}">Logout</a></span>
+            | <span><a href="{{url_for('logout')}}">Logout</a></span> |
         {% else %}
-            |<span><a href="{{url_for('login')}}">Login</a></span>
+            | <span><a href="{{url_for('login')}}">Login</a></span> |
         {% endif %}
         <hr>
         {% with messages = get_flashed_messages() %}
