--- a/app/templates/user.html
+++ b/app/templates/user.html
@@ -9,8 +9,13 @@
     </table>
     <hr>
     {% for post in posts %}
-        <p>
-            {{post.author.nickname}} says: <b>{{post.body}}</b>
-        </p>
+        <table>
+            <tr valign="top">
+                <td><img src="{{post.author.avatar(50)}}"></td>
+                <td><i>{{post.author.nickname}} says:</i>
+                <br>
+                {{post.body}}
+            </tr>
+        </table>
     {% endfor %}
 {% endblock %}
