--- a/app/templates/user.html
+++ b/app/templates/user.html
@@ -9,6 +9,6 @@
     </table>
     <hr>
     {% for post in posts %}
-        {% include 'post.html'}
+        {% include 'post.html' %}
     {% endfor %}
 {% endblock %}
