--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -3,7 +3,7 @@
         {% if title %}
             <title>{{title}} - microblog</title>
         {% else %}
-            <title>microblock</title>
+            <title>microblog</title>
         {% endif %}
     </head>
     <body>
