--- a/app/templates/user.html
+++ b/app/templates/user.html
@@ -5,11 +5,17 @@
         <tr valign="top">
             <td><img src="{{user.avatar(128)}}"></td>
             <td><h1>User: {{user.nickname}}</h1></td>
+
             {% if user.about_me %}
                 <p>{{user.about_me}}</p>
             {% endif %}
+
             {% if user.last_seen %}
                 <p><i>Last seen on: {{user.last_seen}}</i></p>
+            {% endif %}
+
+            {% if user.id == g.user.id %}
+                <p><a href="{{url_for('edit')}}">Edit Profile</a></p>
             {% endif %}
         </tr>
     </table>
