--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -24,8 +24,20 @@
         </table>
     </form>
 
-    {% for post in posts %}
+    {% for post in posts.items %}
         {% include 'post.html' %}
     {% endfor %}
+
+    {% if posts.has_prev %}
+        <a href="{{url_for('index', page=posts.prev_num)}}">< Newer Posts</a>
+    {% else %}
+        < Newer Posts
+    {% endif %}
+    | 
+    {% if posts.has_next %}
+        <a href="{{url_for('index', page=posts.next_num)}}">Older Posts ></a>
+    {% else %}
+        Older Posts >
+    {% endif %}
 
 {% endblock %}
