--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -7,14 +7,21 @@
         {% endif %}
     </head>
     <body>
-        | <span>Microblog: <a href="{{url_for('index')}}">Home</a></span>
-        {% if g.user.is_authenticated() %}
-            | <span><a href="{{url_for('logout')}}">Logout</a></span> 
-            | <span><a href="{{url_for('user', nickname=g.user.nickname)}}">Your Profile</a>
-        {% else %}
-            | <span><a href="{{url_for('login')}}">Login</a></span> 
-        {% endif %}
-            |
+        <div>
+            Microblog: <a href="{{url_for('index')}}">Home</a>
+            {% if g.user.is_authenticated() %}
+                | <a href="{{url_for('user', nickname=g.user.nickname)}}">Your Profile</a>
+                | <form style="display:inline;" action="{{url_for('search')}}" method="post" name="search">
+                    {{g.search_form.hidden_tag()}}
+                    {{g.search_form.search(size=20)}}
+                    <input type="submit" value="Search">
+                    </form>
+                | <a href="{{url_for('logout')}}">Logout</a>
+            {% else %}
+                | <a href="{{url_for('login')}}">Login</a>
+            {% endif %}
+                |
+        </div>
         <hr>
         {% with messages = get_flashed_messages() %}
             {% if messages %}
