--- a/app/templates/user.html
+++ b/app/templates/user.html
@@ -1,47 +1,47 @@
 {% extends "base.html" %}
 
 {% block content %}
-    <table>
-        <tr valign="top">
-            <td><img src="{{user.avatar(128)}}"></td>
-            <td>
-                <h1>User: {{user.nickname}}</h1>
+    {% include 'flash.html' %}
 
-                {% if user.about_me %}
-                    <p>{{user.about_me}}</p>
-                {% endif %}
+    <div class="well well-large" style="height:140px;">
+        <div class="pull-right">
+            <img src="{{user.avatar(128)}}" class="img-polaroid">
+        </div>
+    
 
-                {% if user.last_seen %}
-                    <p><i>Last seen on: {{user.last_seen}}</i></p>
-                {% endif %}
+        <h1>{{user.nickname}}</h1>
 
-                <p>
-                    {{user.followers.count()}} followers |
-                    {% if user.id == g.user.id %}
-                        <a href="{{url_for('edit')}}">Edit Profile</a>
-                    {% elif not g.user.is_following(user) %}
-                        <a href="{{url_for('follow', nickname=user.nickname)}}">Follow</a>
-                    {% else %}
-                        <a href="{{url_for('unfollow', nickname=user.nickname)}}">Unfollow</a>
-                    {% endif %}
-                </p>
-            </td>
-        </tr>
-    </table>
-    <hr>
+        {% if user.about_me %}<p>{{user.about_me}}</p>{% endif %}
+        {% if user.last_seen %}<p><em>Last seen on: {{user.last_seen}}</em></p>{% endif %}
+        <p>
+            Followers: {{user.followers.count()-1}} | Following: {{user.followed.count()-1}} |
+
+            {% if user.id == g.user.id %}
+                <a href="{{url_for('edit')}}">Edit your profile</a>
+            {% elif not g.user.is_following(user) %}
+                <a href="{{url_for('follow', nickname=user.nickname)}}">Follow</a>
+            {% else %}
+                <a href="{{url_for('unfollow', nickname=user.nickname)}}">Unfollow</a>
+            {% endif %}
+        </p>
+    </div>
+
     {% for post in posts.items %}
         {% include 'post.html' %}
     {% endfor %}
 
-    {% if posts.has_prev %}
-        <a href="{{url_for('user', nickname=user.nickname, page=posts.prev_num)}}">< Newer Posts</a>
-    {% else %}
-        < Newer Posts
-    {% endif %}
-    | 
-    {% if posts.has_next %}
-        <a href="{{url_for('user', nickname=user.nickname, page=posts.next_num)}}">Older Posts ></a>
-    {% else %}
-        Older Posts >
-    {% endif %}
+    <ul class="pager">
+        {% if posts.has_prev %}
+            <li class="previous"><a href="{{url_for('user', nickname=user.nickname, page=posts.prev_num)}}">< Newer Posts</a></li>
+        {% else %}
+            <li class="previous disabled"><a href="#">< Newer Posts</a></li>
+        {% endif %}
+
+        {% if posts.has_next %}
+            <li class="next"><a href="{{url_for('user', nickname=user.nickname, page=posts.next_num)}}">Older Posts ></a></li>
+        {% else %}
+            <li class="next disabled"><a href="#">Older Posts ></a></li>
+        {% endif %}
+    </ul>
+
 {% endblock %}
