--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -31,12 +31,12 @@
         {% if posts.has_prev %}
             <li class="previous"><a href="{{url_for('index', page=posts.prev_num)}}">< Newer Posts</a></li>
         {% else %}
-            <li class="previous-disabled"><a href="#">< Newer Posts</a></li>
+            <li class="previous disabled"><a href="#">< Newer Posts</a></li>
         {% endif %}
         {% if posts.has_next %}
             <li class="next"><a href="{{url_for('index', page=posts.next_num)}}">Older Posts ></a></li>
         {% else %}
-            <li class="next-disabled"><a href="#">Older Posts ></a></li>
+            <li class="next disabled"><a href="#">Older Posts ></a></li>
         {% endif %}
     </ul>
 {% endblock %}
