--- a/app/templates/follower_email.html
+++ b/app/templates/follower_email.html
@@ -1,6 +1,6 @@
 <p>Dear {{user.nickname}},</p>
 
-<p><a href="{{url_for('user', nickname=follower.nickname, _external=True)}}">{{follower.nickname}}</a> is now your follower.</p>
+<p>{{_('%(nickname)s is now your follower.', nickname='<a href="' + url_for('user', nickname=follower.nickname, _external=True) + '">' + follower.nickname + '</a>')}}</p>
 
 <table>
     <tr valign="top">
@@ -13,6 +13,6 @@
     </tr>
 </table>
 
-<p>Regards,</p>
+<p>{{_('Regards,')}}</p>
 
-<p>The <code>microblog</code> admin</p>
+<p>{{_('The <code>microblog</code> admin')}}</p>
