--- a/app/templates/post.html
+++ b/app/templates/post.html
@@ -6,11 +6,9 @@
             </a>
         </td>
         <td>
-            <p>
-                <a href="{{url_for('user', nickname=post.author.nickname)}}">
-                    {{post.author.nickname}}
-                </a> said {{momentjs(post.timestamp).fromNow()}}:
-            </p>
+            {% autoescape false %}
+                <p>{{_('%(nickname)s said %(when)s:', nickname='<a href="%s">%s</a>' % (url_for('user', nickname=post.author.nickname), post.author.nickname), when=momentjs(post.timestamp).fromNow())}}</p>
+            {% endautoescape %}
             <p>
                 <strong>
                     {{post.body}}
