--- a/app/templates/user.html
+++ b/app/templates/user.html
@@ -12,16 +12,17 @@
         <h1>{{user.nickname}}</h1>
 
         {% if user.about_me %}<p>{{user.about_me}}</p>{% endif %}
-        {% if user.last_seen %}<p><em>Last seen: {{momentjs(user.last_seen).calendar()}}</em></p>{% endif %}
+        {% if user.last_seen %}<p><em>{{_('Last seen:')}} {{momentjs(user.last_seen).calendar()}}</em></p>{% endif %}
+
         <p>
-            Followers: {{user.followers.count()-1}} | Following: {{user.followed.count()-1}} |
+            {{_('Followers:')}} {{user.followers.count()-1}} | {{_('Following:')}} {{user.followed.count()-1}} |
 
             {% if user.id == g.user.id %}
-                <a href="{{url_for('edit')}}">Edit your profile</a>
+                <a href="{{url_for('edit')}}">{{_('Edit your profile')}}</a>
             {% elif not g.user.is_following(user) %}
-                <a href="{{url_for('follow', nickname=user.nickname)}}">Follow</a>
+                <a href="{{url_for('follow', nickname=user.nickname)}}">{{_('Follow')}}</a>
             {% else %}
-                <a href="{{url_for('unfollow', nickname=user.nickname)}}">Unfollow</a>
+                <a href="{{url_for('unfollow', nickname=user.nickname)}}">{{_('Unfollow')}}</a>
             {% endif %}
         </p>
     </div>
@@ -32,14 +33,14 @@
 
     <ul class="pager">
         {% if posts.has_prev %}
-            <li class="previous"><a href="{{url_for('user', nickname=user.nickname, page=posts.prev_num)}}">< Newer Posts</a></li>
+            <li class="previous"><a href="{{url_for('user', nickname=user.nickname, page=posts.prev_num)}}">{{_('Newer Posts')}}</a></li>
         {% else %}
-            <li class="previous disabled"><a href="#">< Newer Posts</a></li>
+            <li class="previous disabled"><a href="#">{{_('Newer Posts')}}</a></li>
         {% endif %}
         {% if posts.has_next %}
-            <li class="next"><a href="{{url_for('user', nickname=user.nickname, page=posts.next_num)}}">Older Posts ></a></li>
+            <li class="next"><a href="{{url_for('user', nickname=user.nickname, page=posts.next_num)}}">{{_('Older Posts')}}</a></li>
         {% else %}
-            <li class="next disabled"><a href="#">Older Posts ></a></li>
+            <li class="next disabled"><a href="#">{{_('Older Posts')}}</a></li>
         {% endif %}
     </ul>
 {% endblock %}
